сверстаны два первых блока

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,7 @@
-@import 'base/_variables'
-@import 'base/_mixins'
-
-*
-    background-color: $main-color
+@import 'fonts'
+@import 'base/variables'
+@import 'base/interface'
+@import 'base/mixins'
+@import 'bloks/promo'
+@import 'bloks/header'
+@import 'bloks/advantages'
