--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -5,4 +5,6 @@
 @import 'bloks/promo'
 @import 'bloks/header'
 @import 'bloks/advantages'
+@import 'bloks/consultation'
+@import 'bloks/forms'
 @import 'base/media'
