--- a/src/sass/base/_interface.sass
+++ b/src/sass/base/_interface.sass
@@ -8,6 +8,11 @@
     font-size: 30px
     font-weight: 700
     text-align: center
+    text-transform: uppercase
+    &_left
+        color: #ffffff
+        font-size: 36px
+        text-align: left
 .button
     width: 150px
     height: 30px
@@ -22,4 +27,8 @@
         margin-top: 68px
         width: 300px
         height: 50px
+        font-size: 16px
+    &_submit
+        width: 100%
+        height: 55px
         font-size: 16px
