адаптивка блока с формой

--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -36,6 +36,8 @@
         &__descr
             font-size: 16px
             margin-top: 10px
+    .title_left
+        font-size: 28px
 @media ( max-width: 690px )
     .container
         max-width: 610px
@@ -53,7 +55,13 @@
             font-size: 10px
             span
                 font-size: 12px
-
+@media ( max-width: 575px )
+    .title_left
+        font-size: 23px
+    .consultation
+        &__descr
+            margin-top: 43px
+            font-size: 17px
 @media ( max-width: 543px )
     .container
         max-width: 504px
