--- a/src/sass/base/_media.sass
+++ b/src/sass/base/_media.sass
@@ -14,6 +14,12 @@
 @media ( max-width: 860px )
     .container
         max-width: 753px
+@media ( max-width: 790px )
+    .carousel
+        &__inner
+            width: 581px
+            img
+                width: 100%
 @media ( max-width: 767px )
     .container
         max-width: 655px
@@ -38,6 +44,37 @@
             margin-top: 10px
     .title_left
         font-size: 28px
+    .slick-dots
+        margin: 0 auto
+        display: flex
+        margin-left: 200px
+        margin-top: 28px
+        li
+            list-style-type: none
+    // .slick-active
+        // background-color: #cc0608
+        // z-index: 2
+
+    #slick-slide-control00, #slick-slide-control01, #slick-slide-control02
+        width: 35px
+        height: 11px
+        border-radius: 5px
+        font-size: 0px
+        background-color: #131219
+        color: #131219
+        border: none
+        text-indent: -9999px
+        line-height: 0
+        margin-right: 18px
+        &:active
+            background-color: #cc0608
+            color: #cc0608
+        &::after
+            content: '0'
+            text-indent: 0
+            display: block
+            line-height: initial
+            z-index: 1
 @media ( max-width: 690px )
     .container
         max-width: 610px
@@ -62,6 +99,13 @@
         &__descr
             margin-top: 43px
             font-size: 17px
+    .carousel
+        &__inner
+            width: 561px
+            img
+                width: 98%
+    .slick-dots
+        margin-left: 171px
 @media ( max-width: 543px )
     .container
         max-width: 504px
@@ -84,7 +128,13 @@
     .header
         &__official
             display: none
-
+    .carousel
+        &__inner
+            width: 413px
+            img
+                width: 95%
+    .slick-dots
+        margin-left: 80px
 @media ( max-width: 391px )
     .container
         max-width: 310px
@@ -123,6 +173,11 @@
     .advantages
         &__wrapper
             margin-top: 0
+    .carousel
+        &__inner
+            width: 340px
+    .slick-dots
+        margin-left: 48px
 
 @media ( max-width: 320px )
     .title
