сделана отправка заказов почтой и плавная прокрутка

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -7,9 +7,10 @@
 @import 'bloks/advantages'
 @import 'bloks/consultation'
 @import 'bloks/forms'
-@import 'bloks/_carousel'
-@import 'bloks/_catalog'
+@import 'bloks/carousel'
+@import 'bloks/catalog'
 @import 'bloks/feed'
 @import 'bloks/footer'
-@import 'bloks/_modal'
+@import 'bloks/modal'
+@import 'bloks/pageup'
 @import 'base/media'
