--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,5 +1,6 @@
 @import 'fonts'
 @import 'base/variables'
+@import 'base/animate'
 @import 'base/interface'
 @import 'base/mixins'
 @import 'bloks/promo'
