--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,4 +1,7 @@
+@import 'libs/boostrap-reboot'
 @import 'fonts'
+@import 'libs/slick'
+@import 'libs/animate'
 @import 'base/variables'
 @import 'base/animate'
 @import 'base/interface'
