--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -1,5 +1,6 @@
 @font-face {
     font-family: 'Museo Sans';
+    font-display: swap;
     src: url('../fonts/Museo-sans-700/MuseoSansCyrl-700.eot');
     src: url('../fonts/Museo-sans-700/MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
         url('../fonts/Museo-sans-700/MuseoSansCyrl-700.woff') format('woff'),
@@ -10,6 +11,7 @@
 
 @font-face {
     font-family: 'Museo Sans';
+    font-display: swap;
     src: url('../fonts/Museo-sans-500/MuseoSansCyrl-500.eot');
     src: url('../fonts/Museo-sans-500/MuseoSansCyrl-500.eot?#iefix') format("embedded-opentype"),
         url('../fonts/Museo-sans-500/MuseoSansCyrl-500.woff') format("woff"),
@@ -20,6 +22,7 @@
 
 @font-face {
     font-family: 'Museo Sans';
+    font-display: swap;
     src: url('../fonts/Museo-sans-300/MuseoSansCyrl-300.eot');
     src: url('../fonts/Museo-sans-300/MuseoSansCyrl-300.eot?#iefix') format("embedded-opentype"),
         url('../fonts/Museo-sans-300/MuseoSansCyrl-300.woff') format("woff"),
